--- a/index.html
+++ b/index.html
@@ -225,7 +225,7 @@
   <section id="contact" class="section contact-section">
     <div class="container contact-inner">
       <div class="logo2">
-        <img src="img/Logo1.png" alt="logo" />
+        <img src="img/Logo.png" alt="logo" />
         <div>
           شـركة سفــير الخليج للمـقاولات
         </div>
