--- a/index.html
+++ b/index.html
@@ -3,6 +3,10 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <link rel="icon" type="image/png" href="img/Logo.png">
+  <link rel="apple-touch-icon" href="images/logo-180.png">
+<meta name="theme-color" content="#000000">
+  
   <title>شركة سفير الخليج للمقاولات</title>
 
   <!-- ==================== Google Fonts خطوط ====================-->
