--- a/index.html
+++ b/index.html
@@ -3,11 +3,11 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <link rel="icon" type="image/png" href="/Safir-AlKhaleej-Contracting/favicon.png">
-  <link rel="apple-touch-icon" href="images/logo-180.png">
-<meta name="theme-color" content="#000000">
-  
   <title>شركة سفير الخليج للمقاولات</title>
+  <!-- ==================== FAVICON LOGO ==================== -->
+  <link rel="icon" type="image/png" href="/Safir-AlKhaleej-Contracting/favicon.png">
+  <link rel="apple-touch-icon" href="/Safir-AlKhaleej-Contracting/favicon.png">
+  <meta name="theme-color" content="#000000">
 
   <!-- ==================== Google Fonts خطوط ====================-->
   <link rel="preconnect" href="https://fonts.googleapis.com">
